Apply consistent soft theme via style.css across all HTML pages

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html data-username="{{ data_username }}">
 <head>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
   <title>Chatroom</title>
   <style>
     :root {
