--- a/templates/login.html
+++ b/templates/login.html
@@ -9,5 +9,6 @@
     <label>Password: <input type="password" name="password" required></label><br>
     <button type="submit">Login</button>
   </form>
-  <p><a href="/">Back to Home</a></p>
+  <p><a href="/" class="back-link">Back to Home</a></p>
+
 {% endblock %}
